<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/gameField"
        app:layout_constraintTop_toBottomOf="@+id/rowsAmount"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <include android:id="@+id/row0" layout="@layout/table_row" />

        <include android:id="@+id/row1" layout="@layout/table_row" />

        <include android:id="@+id/row2" layout="@layout/table_row" />

        <include android:id="@+id/row3" layout="@layout/table_row" />

        <include android:id="@+id/row4" layout="@layout/table_row" />

    </TableLayout>

    <TextView
        android:id="@+id/rowsAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/rowsAmount"
        android:text="@string/rows_amount"
        android:textSize="20sp"
        style="@style/margins"
        app:layout_constraintTop_toBottomOf="@id/fieldSizeLabel"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:importantForAutofill="no"
        android:id="@+id/rowsAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:minWidth="48dp"
        app:layout_constraintTop_toBottomOf="@id/fieldSizeLabel"
        app:layout_constraintStart_toEndOf="@id/rowsAmountLabel"
        android:textSize="40sp"
        android:background="@color/edit"
        style="@style/margins"
        android:inputType="number"
        android:text="@string/default_game_field_size"
         />

    <TextView
        android:id="@+id/colsAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/colsAmount"
        android:text="@string/cols_amount"
        android:textSize="20sp"
        style="@style/margins"
        app:layout_constraintTop_toBottomOf="@id/fieldSizeLabel"
        app:layout_constraintStart_toEndOf="@id/rowsAmount" />

    <EditText
        android:id="@+id/colsAmount"
        android:importantForAutofill="no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:background="@color/edit"
        app:layout_constraintTop_toBottomOf="@id/fieldSizeLabel"
        app:layout_constraintStart_toEndOf="@id/colsAmountLabel"
        android:textSize="40sp"
        style="@style/margins"
        android:inputType="number"
        android:text="@string/default_game_field_size"
        />

    <TextView
        android:id="@+id/fieldSizeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/field_size"
        style="@style/margins"
        android:textSize="40sp"
        tools:layout_editor_absoluteY="489dp" />

    <Button
        android:id="@+id/startGameBtn"
        style="@style/margins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameField" />

    <TextView
        android:id="@+id/playerErrors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Player Errors"
        android:text="@string/player_error_count"
        android:textSize="20sp"
        style="@style/margins"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/useColorCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/margins"
        android:text="@string/use_colors"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startGameBtn" />


</androidx.constraintlayout.widget.ConstraintLayout>